force-app/main/default/objects/Businessday__c/Businessday__c.object-meta.xml
<CustomObject>
    <label>営業日マスタ</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>管理No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>