force-app/main/default/objects/Businessday__c/fields/businessday__c.field-meta.xml
<CustomField>
    <fullName>businessday__c</fullName>
    <label>営業日数</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>