force-app/main/default/objects/Businessday__c/fields/Businessdayinweek__c.field-meta.xml
<CustomField>
    <fullName>Businessdayinweek__c</fullName>
    <label>週ごとの営業日</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>