force-app/main/default/objects/Businessday__c/fields/monday__c.field-meta.xml
<CustomField>
    <fullName>monday__c</fullName>
    <label>月曜日の日付</label>
    <type>Date</type>
</CustomField>