force-app/main/default/objects/Businessday__c/fields/month__c.field-meta.xml
<CustomField>
    <fullName>month__c</fullName>
    <label>該当日付</label>
    <type>Date</type>
</CustomField>