force-app/main/default/objects/Businessday__c/fields/numberobmonth__c.field-meta.xml
<CustomField>
    <fullName>numberobmonth__c</fullName>
    <label>週数</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>